--- a/package.json
+++ b/package.json
@@ -19,25 +19,13 @@
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^2.4.0",
-    "body-parser": "^1.10.0",
-    "cors": "^2.5.2",
-    "express": "^4.10.6",
-    "express-partials": "^0.3.0",
     "grunt": "^0.4.4",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-cssmin": "^0.9.0",
-    "grunt-contrib-jshint": "^0.9.2",
-    "grunt-contrib-uglify": "^0.4.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-mocha-test": "^0.10.0",
-    "grunt-nodemon": "^0.2.1",
-    "grunt-shell": "^0.6.4",
     "knex": "^0.7.3",
     "knex-postgis": "^0.1.2",
     "mocha": "^2.1.0",
-    "morgan": "^1.5.0",
     "pg": "^4.1.1",
-    "request": "^2.51.0"
+    "request": "^2.51.0",
+    "socket.io": "^1.2.1"
   },
   "devDependencies": {
     "chai": "~1.8.0",
