--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mocha": "^2.1.0",
     "nanotimer": "^0.3.6",
     "pg": "^4.1.1",
+    "proj4": "^2.3.3",
     "request": "^2.51.0",
     "socket.io": "^1.2.1"
   },
