--- a/tower-client/bower.json
+++ b/tower-client/bower.json
@@ -12,7 +12,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
-    "semantic-ui": "~1.6.2"
+    "semantic-ui": "~1.6.2",
+    "socket.io-client": "~1.2.1"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
