--- a/tower-client/bower.json
+++ b/tower-client/bower.json
@@ -13,7 +13,8 @@
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
     "semantic-ui": "~1.6.2",
-    "socket.io-client": "~1.2.1"
+    "socket.io-client": "~1.2.1",
+    "proj4": "~2.3.3"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
